--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Months: 86\n",
+      "Total: $38382578\n",
+      "Average Change: $-2315.12\n",
+      "Greatest Increase in Profits: Feb-2012 ($1926159)\n",
+      "Greatest Decrease in Profits: Sep-2013 ($-2196167)\n"
+     ]
+    }
+   ],
    "source": [
     "# Pseudo-code:\n",
     "    # Open the budget data file.\n",
